[package]
name = "reapi-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.77"
authors = ["Austin Seipp <aseipp@pobox.com>"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console-subscriber = "0.2.0"
hex = "0.4.3"
prost = "0.12.4"
prost-types = "0.12.4"
redb = "2.1.1"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = [
    "full",
    "tracing",
    "macros",
    "rt-multi-thread",
] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tonic-health = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11.0"

[profile.release]
incremental = true
lto = "thin"
strip = "debuginfo"
codegen-units = 1
opt-level = "z"
