cargo-features = []

[workspace]
resolver = "2"
members = ["tools/cache-server", "tools/smoltar"]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.79"
edition = "2021"
readme = "README.md"
authors = ["Austin Seipp <aseipp@pobox.com>"]

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console-subscriber = "0.2.0"
flate2 = "1.0.30"
hex = "0.4.3"
openssl = "0.10.64"
prost = "0.12.4"
prost-types = "0.12.4"
redb = "2.1.1"
sha2 = "0.10.8"
tar = "0.4.41"
tokio = { version = "1.37.0", features = [
    "full",
    "tracing",
    "macros",
    "rt-multi-thread",
] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-build = "0.11.0"
tonic-reflection = "0.11.0"
tonic-health = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
incremental = true
lto = "thin"
strip = "debuginfo"
codegen-units = 1
opt-level = "z"
